Add nashorn module at runtime, no longer need extra jvm arguments.